--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,8 +1,8 @@
 trigger:
-- main  # This runs the pipeline when you push changes to the main branch
+- main  
 
 pool:
-  vmImage: 'ubuntu-latest'  # Use a Microsoft-hosted Ubuntu machine
+  name: Default  
 
 steps:
 - task: UseDotNet@2
@@ -13,13 +13,13 @@ steps:
     installationPath: $(Agent.ToolsDirectory)/dotnet
 
 - script: dotnet build --configuration Release
-  displayName: 'Build the project'
+  displayName: 'Build the Project'
 
 - script: dotnet test
-  displayName: 'Run tests'
+  displayName: 'Run Tests'
 
 - script: dotnet pack --configuration Release --output $(Build.ArtifactStagingDirectory)
-  displayName: 'Pack the project'
+  displayName: 'Package the Project'
 
 - task: PublishBuildArtifacts@1
   displayName: 'Publish Artifact to Azure DevOps'
