--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,13 +12,15 @@ steps:
     version: '6.x'
     installationPath: $(Agent.ToolsDirectory)/dotnet
 
-- script: dotnet build --configuration Release
+- script: |
+    dotnet build ./MyHelloWorld/MyHelloWorld.csproj --configuration Release
   displayName: 'Build the Project'
 
 - script: dotnet test
   displayName: 'Run Tests'
 
-- script: dotnet pack --configuration Release --output $(Build.ArtifactStagingDirectory)
+- script: |
+    dotnet pack ./MyHelloWorld/MyHelloWorld.csproj --configuration Release --output $(Build.ArtifactStagingDirectory)
   displayName: 'Package the Project'
 
 - task: PublishBuildArtifacts@1
