--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,8 +11,11 @@ steps:
   displayName: 'Install .NET SDK'
   inputs:
     packageType: 'sdk'
-    version: '6.x'
+    version: '8.x'   
     installationPath: $(Agent.ToolsDirectory)/dotnet
+
+- script: dotnet restore ./MyHelloWorld/MyHelloWorld.csproj
+  displayName: 'Restore Dependencies'
 
 - script: dotnet build ./MyHelloWorld/MyHelloWorld.csproj --configuration Release
   displayName: 'Build the Project'
