--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,10 +14,16 @@ steps:
     version: '8.x'   
     installationPath: $(Agent.ToolsDirectory)/dotnet
 
+- script: |
+    VERSION=$(date +%Y%m%d%H%M)
+    echo "##vso[task.setvariable variable=VersionNumber]$VERSION"
+    echo "Generated Version: $VERSION"
+  displayName: 'Generate Build Version'
+
 - script: dotnet restore ./MyHelloWorld/MyHelloWorld.csproj
   displayName: 'Restore Dependencies'
 
-- script: dotnet build ./MyHelloWorld/MyHelloWorld.csproj --configuration Release
+- script: dotnet build ./MyHelloWorld/MyHelloWorld.csproj --configuration Release -p:Version=$(VersionNumber)
   displayName: 'Build the Project'
 
 - script: dotnet test ./MyHelloWorld/MyHelloWorld.csproj
