--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,8 +14,9 @@ steps:
     version: '8.x'   
     installationPath: $(Agent.ToolsDirectory)/dotnet
 
+# Generate the build version based on timestamp
 - script: |
-    VERSION=$(date +%Y%m%d%H%M)
+    VERSION=$(date +%Y.%m.%d.%H%M)
     echo "##vso[task.setvariable variable=VersionNumber]$VERSION"
     echo "Generated Version: $VERSION"
   displayName: 'Generate Build Version'
